--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -36,7 +36,7 @@
 }
 
 .top-font h1{
-  -webkit-animation: scrollmask 10s ease 1.5s infinite;
+  -webkit-animation: scrollmask 30s ease 0s infinite;
   -webkit-background-clip: text;
   background-image: image-url("img/post.jpg");
   color: transparent;
@@ -407,6 +407,6 @@ transform: rotate(-45deg);
 }
 
 .footer {
-  height: 100px;
-  background-color: #f5f5f5;
+  height: auto;
+  background-color: black;
 }
