--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,7 @@
 }
 
 body {
-	background-image: image-url("back1.jpg");
+	background-image: image-url("back.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
