--- a/app/views/layouts/_top_footer.html.erb
+++ b/app/views/layouts/_top_footer.html.erb
@@ -12,18 +12,18 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
         <ul class="navbar-nav justify-content-center">
           <% if user_signed_in? %>
-            <li class="mx-5" style="font-size: 20px;"><%= link_to 'Top', root_path,class: "text-light" %></li>
-            <li class="mx-5" style="font-size: 20px;"><%= link_to 'About', about_path,class: "text-light" %></li>
-            <li class="mx-5" style="font-size: 20px;"><%= link_to 'Post', new_bean_path,class: "text-light" %></li>
-            <li class="mx-5" style="font-size: 20px;"><%= link_to 'Beans', beans_path,class: "text-light" %></li>
-            <li class="mx-5" style="font-size: 20px;"><%= link_to 'My Page', user_path(current_user.id),class: "text-light" %></li>
-            <li class="mx-5" style="font-size: 20px;"><%= link_to 'Log Out', destroy_user_session_path,class: "text-light", method: :delete%></li>
+            <li class="mx-5"><%= link_to 'Top', root_path,class: "text-light" %></li>
+            <li class="mx-5"><%= link_to 'About', about_path,class: "text-light" %></li>
+            <li class="mx-5"><%= link_to 'Post', new_bean_path,class: "text-light" %></li>
+            <li class="mx-5"><%= link_to 'Beans', beans_path,class: "text-light" %></li>
+            <li class="mx-5"><%= link_to 'My Page', user_path(current_user.id),class: "text-light" %></li>
+            <li class="mx-5"><%= link_to 'Log Out', destroy_user_session_path,class: "text-light", method: :delete%></li>
           <% else %>
-            <li class="mx-5" style="font-size: 20px;"><%= link_to 'Top', root_path,class: "text-light" %></li>
-            <li class="mx-5" style="font-size: 20px;"><%= link_to 'About', about_path,class: "text-light" %></li>
-            <li class="mx-5" style="font-size: 20px;"><%= link_to 'Sign Up', new_user_registration_path,class: "text-light" %></li>
-            <li class="mx-5" style="font-size: 20px;"><%= link_to 'Log In', new_user_session_path,class: "text-light" %></li>
-            <li class="mx-5" style="font-size: 20px;"><%= link_to 'Guest', users_guest_sign_in_path,class: "text-light", method: :post %>
+            <li class="mx-5"><%= link_to 'Top', root_path,class: "text-light" %></li>
+            <li class="mx-5"><%= link_to 'About', about_path,class: "text-light" %></li>
+            <li class="mx-5"><%= link_to 'Sign Up', new_user_registration_path,class: "text-light" %></li>
+            <li class="mx-5"><%= link_to 'Log In', new_user_session_path,class: "text-light" %></li>
+            <li class="mx-5"><%= link_to 'Guest', users_guest_sign_in_path,class: "text-light", method: :post %>
           <% end %>
         </ul>
       </div>
